// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Ratings component renders the Rating sub-components as expected 1`] = `
"<div className=\\"rating-tier \\">
  <div className=\\"rating-points\\">
    <Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
      10.0 pts
    </Text>
  </div>
  <div className=\\"rating-description\\">
    <Text size=\\"x-small\\" lineHeight=\\"condensed\\" as=\\"span\\" letterSpacing=\\"normal\\">
      Superb
    </Text>
  </div>
  <Text size=\\"x-small\\" fontStyle=\\"italic\\" lineHeight=\\"condensed\\" as=\\"span\\" letterSpacing=\\"normal\\" />
</div>"
`;

exports[`The Ratings component renders the Rating sub-components as expected 2`] = `
"<div className=\\"rating-tier selected\\">
  <div className=\\"rating-points\\">
    <Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
      5.0 pts
    </Text>
  </div>
  <div className=\\"rating-description\\">
    <Text size=\\"x-small\\" lineHeight=\\"condensed\\" as=\\"span\\" letterSpacing=\\"normal\\">
      Meh
    </Text>
  </div>
  <Text size=\\"x-small\\" fontStyle=\\"italic\\" lineHeight=\\"condensed\\" as=\\"span\\" letterSpacing=\\"normal\\">
    More Verbosity
  </Text>
</div>"
`;

exports[`The Ratings component renders the Rating sub-components as expected 3`] = `
"<div className=\\"rating-tier \\">
  <div className=\\"rating-points\\">
    <Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
      2.0 pts
    </Text>
  </div>
  <div className=\\"rating-description\\">
    <Text size=\\"x-small\\" lineHeight=\\"condensed\\" as=\\"span\\" letterSpacing=\\"normal\\">
      Subpar
    </Text>
  </div>
  <Text size=\\"x-small\\" fontStyle=\\"italic\\" lineHeight=\\"condensed\\" as=\\"span\\" letterSpacing=\\"normal\\" />
</div>"
`;

exports[`The Ratings component renders the root component as expected 1`] = `
"<div className=\\"rating-tier-list\\">
  <Rating selected={false} description=\\"Superb\\" points={10} />
  <Rating selected={true} description=\\"Meh\\" long_description=\\"More Verbosity\\" points={5} />
  <Rating selected={false} description=\\"Subpar\\" points={2} />
</div>"
`;
